--- a/feature/main/root/src/main/res/navigation/main_nav_graph.xml
+++ b/feature/main/root/src/main/res/navigation/main_nav_graph.xml
@@ -6,6 +6,18 @@
 
     <fragment
         android:id="@+id/currenciesFragment"
-        android:name="com.vadzim.yeumushkou.main.currancies.presentation.ui.CurrenciesFragment" />
+        android:name="com.vadzim.yeumushkou.main.currancies.presentation.ui.CurrenciesFragment" >
+        <action
+            android:id="@+id/action_currenciesFragment_to_favoritesFragment"
+            app:destination="@id/favoritesFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.vadzim.yeumushkou.favorite.presentation.ui.FavoritesFragment">
+        <action
+            android:id="@+id/action_favoritesFragment_to_currenciesFragment"
+            app:destination="@id/currenciesFragment" />
+    </fragment>
 
 </navigation>
